Use QTextFormat::TextUnderlineStyle instead of QTextFormat::FontUnderline

Summary:
QTextFormat::FontUnderline has been deprecated upstream for a long time.

It seems that for some time setting the underline attribute for syntax
highlighting has been broken, i.e. a user can't set it via the config
widget and setKateExtendedAttributeList always sets it to false. The
latter meant that when the user applied any changes that would write
katesyntaxhighlightingrc, the underline attribute for syntax HL would
unconditionally be set to false which leads to some weird situations,
(e.g. bug 399278 where un/setting "highlight trailing spaces" causes
katesyntaxhighlightingrc to get written to disk which leads to
Markdown:linebreak losing its underline attribute for good).

BUG: 399278
FIXED-IN: 5.57

Reviewers: #ktexteditor, cullmann, dhaumann

Reviewed By: #ktexteditor, cullmann

Subscribers: kde-frameworks-devel, kwrite-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D19161